brat/test/golden/error/badvec2.brat.golden
Error in test/golden/error/badvec2.brat@2:6-9
v3 = nil
     ^^^

  Expected vector of length 3
from the type:  Vec(Int, 3)
but got vector: []
of length 0


